--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^5.14.5",
     "@use-expo/font": "^2.0.0",
     "expo": "~41.0.1",
+    "expo-constants": "~10.1.3",
     "expo-facebook": "~11.0.5",
     "expo-font": "~9.1.0",
     "expo-google-app-auth": "^8.1.7",
