--- a/app.json
+++ b/app.json
@@ -21,9 +21,11 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/logo.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.kitchensense.KitchenSense",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
