--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/ngrok": "^2.4.3",
     "@expo/vector-icons": "^12.0.0",
     "@react-native-community/datetimepicker": "3.2.0",
     "@react-native-community/google-signin": "^5.0.0",
@@ -45,7 +46,7 @@
     "react-native-modal-datetime-picker": "^10.0.0",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.1.0",
-    "react-native-safe-area-context": "^3.2.0",
+    "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "^3.2.0",
     "react-native-uuid": "^2.0.1",
     "react-native-web": "~0.13.12"
